# winnowdemo

./: .gitignore  AdReadiness.txt  CHANGELOG.md  Cargo.toml  Makefile  README.md  RunAdReadiness.bat  input.txt  release-win.ps1  winnowdemo_linux_c64.tar.xz
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/pest/: enum.Atomicity.html  enum.Lookahead.html  enum.MatchDir.html  enum.Token.html  struct.Lines.html  struct.ParserState.html  struct.Position.html  struct.Span.html
docs/proc_macro2/: enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
docs/syn/: enum.BinOp.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericMethodArgument.html  enum.ImplItem.html  enum.Item.html  enum.Pat.html  enum.RangeLimits.html  enum.Stmt.html  enum.TraitItem.html  enum.UseTree.html  index.html  struct.Arm.html  struct.Block.html  struct.Constraint.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBox.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprGroup.html  struct.ExprIf.html  struct.ExprIndex.html  struct.ExprLet.html  struct.ExprLoop.html  struct.ExprMacro.html  struct.ExprMatch.html  (+72 more)
src/: lib.rs  main.rs  nodes.pest
(+167 files in other folders)
