[package]
authors = ["Briana Brownell", "Ben Lovy", "Dan Lovy"]
edition = "2018"
name = "winnowdemo"
version = "1.4.1"

[lib]
name = "winnow_sm"
path = "src/lib.rs"

[[bin]]
name = "winnowdemo"
path = "src/main.rs"

[dependencies]
pest = "2.1"
pest_derive = "2.1"

[dev-dependencies]
pretty_assertions = "0.6"